force-app/main/default/objects/RIO_Education_Ivy_Settings__c/RIO_Education_Ivy_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>App settings for RIO Education.</description>
    <label>RIO Education Settings</label>
</CustomObject>