force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Academic_Profile_Generation_Type__c.field-meta.xml
<CustomField>
    <fullName>Academic_Profile_Generation_Type__c</fullName>
    <defaultValue>&apos;By Individual Program Enrollment&apos;</defaultValue>
    <description>The individual academic profile generation type. Supported options are: By Individual Program Enrollment, By Identifier Mapping.</description>
    <inlineHelpText>The individual academic profile generation type. Supported options are: By Individual Program Enrollment, By Identifier Mapping.</inlineHelpText>
    <label>Academic Profile Generation Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>