force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Academic_Profile_Identifier_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Academic_Profile_Identifier_Mapping__c</fullName>
    <defaultValue>&apos;reduivy__Contact__c=reduivy__Contact__c;reduivy__Study_Program_Academic_Level__c=reduivy__Academic_Level__c&apos;</defaultValue>
    <description>A key pair mapping that maps the fields between individual program enrollment and individual academic profile in semi-colon separated value e.g., FieldA__c=FieldA__c;FieldB__c=FieldB__c.</description>
    <inlineHelpText>A key pair mapping that maps the fields between individual program enrollment and individual academic profile in semi-colon separated value e.g., FieldA__c=FieldA__c;FieldB__c=FieldB__c.</inlineHelpText>
    <label>Academic Profile Identifier Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>