force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Academic_Profile_Name_Format__c.field-meta.xml
<CustomField>
    <fullName>Academic_Profile_Name_Format__c</fullName>
    <defaultValue>&apos;Academic Profile - {reduivy__Contact_Name__c} ({reduivy__Study_Program_Academic_Level__c})&apos;</defaultValue>
    <description>The record name format for new individual academic profile.</description>
    <inlineHelpText>The record name format for new individual academic profile.</inlineHelpText>
    <label>Academic Profile Name Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>