force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Academic_Term_Apply_FA_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term_Apply_FA_Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <inlineHelpText>Batch size of the Transcation Order queueable job for applying FA from study term (Academic Term)</inlineHelpText>
    <label>Academic Term Apply FA Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>