force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Academic_Term_FA_Disbursement_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term_FA_Disbursement_Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <inlineHelpText>(Reserved) Batch size of the funding disbursement queueable job from study term (Academic Term)</inlineHelpText>
    <label>Academic Term FA Disbursement Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>