force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Academic_Term_Generate_Orders_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term_Generate_Orders_Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Batch size for the queueable job that updates Individual Academic Progress to generate transaction orders from the Academic Term.</description>
    <inlineHelpText>Batch size for the queueable job that updates Individual Academic Progress to generate transaction orders from the Academic Term.</inlineHelpText>
    <label>Academic Term Generate Orders Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>