force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Administrative_Account_Name_Format__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Account_Name_Format__c</fullName>
    <defaultValue>&apos;{LastName} Administrative Account&apos;</defaultValue>
    <description>The default naming format for administrative account record.</description>
    <inlineHelpText>The default naming format for administrative account record.</inlineHelpText>
    <label>Administrative Account Name Format</label>
    <length>80</length>
    <type>Text</type>
</CustomField>