force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick to have System.debug visible in the execution log files.</description>
    <inlineHelpText>Tick to have System.debug visible in the execution log files.</inlineHelpText>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>