force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Default_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Owner_Id__c</fullName>
    <defaultValue>CASESAFEID( $User.Id )</defaultValue>
    <description>The default owner for the records created by community user (e.g., custom community user license) in the community.</description>
    <inlineHelpText>The default owner for the records created by community user (e.g., custom community user license) in the community.</inlineHelpText>
    <label>Default Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>