force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Enable_External_Portal_Sync__c.field-meta.xml
<CustomField>
    <fullName>Enable_External_Portal_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To enable the data sync to external portal</description>
    <inlineHelpText>To enable the data sync to external portal</inlineHelpText>
    <label>Enable External Portal Sync</label>
    <type>Checkbox</type>
</CustomField>