force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Enable_Record_Value_Translation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Record_Value_Translation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To enable record value translation which will create and link a new translation map when new records are created.</description>
    <inlineHelpText>To enable record value translation which will create and link a new translation map when new records are created.</inlineHelpText>
    <label>Enable Record Value Translation</label>
    <type>Checkbox</type>
</CustomField>