force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Enable_RIO_Education__c.field-meta.xml
<CustomField>
    <fullName>Enable_RIO_Education__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that the app is enabled. This is used to enable/disable trigger controllers.</description>
    <inlineHelpText>Indicates that the app is enabled. This is used to enable/disable trigger controllers.</inlineHelpText>
    <label>Enable RIO Education</label>
    <type>Checkbox</type>
</CustomField>