force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Exclude_GPA_For_Repeated_Unit__c.field-meta.xml
<CustomField>
    <fullName>Exclude_GPA_For_Repeated_Unit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Exclude the non best attempt repeated individual enrollment from GPA and Credits calculation.</description>
    <inlineHelpText>Exclude the non best attempt repeated individual enrollment from GPA and Credits calculation.</inlineHelpText>
    <label>Exclude GPA/Credits For Repeated Unit</label>
    <type>Checkbox</type>
</CustomField>