force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Faculty_Permission_Set_Ids__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Permission_Set_Ids__c</fullName>
    <description>A list of permission set id for faculty separated by semi-colon.</description>
    <inlineHelpText>A list of permission set id for faculty separated by semi-colon.</inlineHelpText>
    <label>Faculty Permission Set Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>