force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Faculty_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Profile_Id__c</fullName>
    <description>Faculty user profile id.</description>
    <inlineHelpText>Faculty user profile id.</inlineHelpText>
    <label>Faculty Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>