force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/File_Rendition_Url__c.field-meta.xml
<CustomField>
    <fullName>File_Rendition_Url__c</fullName>
    <defaultValue>&apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB720BY480&amp;versionId={0}&amp;contentId={1}&apos;</defaultValue>
    <description>Salesforce Default Content Location URL</description>
    <inlineHelpText>Salesforce Default Content Location URL</inlineHelpText>
    <label>File Rendition Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>