force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Integration_Queue_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Integration_Queue_Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <description>The batch size for integration queue queuable job to sync the records to external portal.</description>
    <inlineHelpText>The batch size for integration queue queuable job to sync the records to external portal.</inlineHelpText>
    <label>Integration Queue Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>