force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/License_Schedule_Job_Frequency__c.field-meta.xml
<CustomField>
    <fullName>License_Schedule_Job_Frequency__c</fullName>
    <defaultValue>&apos;0 0 0 ? * SUN&apos;</defaultValue>
    <description>Frequency of the license schedule job.</description>
    <inlineHelpText>The time to execute the license checking job in Salesforce cron expression, e.g., &apos;0 0 12 ? * TUE&apos; for every Tuesday at 12 PM. By default, the job will run every Sunday at 12 AM.</inlineHelpText>
    <label>License Schedule Job Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>