force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Maximum_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Sequence_Number__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Maximum sequence number for a contact</description>
    <label>Maximum Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>