force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Notification_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type_Id__c</fullName>
    <description>Custom notification type id to be used for notification.</description>
    <inlineHelpText>Custom notification type id to be used for notification.</inlineHelpText>
    <label>Notification Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>