force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Preserve_pre_enrollment_waitlist_date__c.field-meta.xml
<CustomField>
    <fullName>Preserve_pre_enrollment_waitlist_date__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Preserves the waitlist date when moving enrollment status from enrollment requested to waitlisted</description>
    <inlineHelpText>Preserves the waitlist date when moving enrollment status from enrollment requested to waitlisted</inlineHelpText>
    <label>Preserve pre-enrollment waitlist date</label>
    <type>Checkbox</type>
</CustomField>