force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Student_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_Profile_Id__c</fullName>
    <description>Student user profile id.</description>
    <inlineHelpText>Student user profile id.</inlineHelpText>
    <label>Student Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>