force-app/main/default/objects/RIO_Education_Ivy_Settings__c/fields/Use_Study_Intake_Group__c.field-meta.xml
<CustomField>
    <fullName>Use_Study_Intake_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Study Intake Group</label>
    <type>Checkbox</type>
</CustomField>